attempt at better dashboard layout

--- a/app/assets/javascripts/templates/add_shop.handlebars
+++ b/app/assets/javascripts/templates/add_shop.handlebars
@@ -18,7 +18,7 @@
     </div>
     <div class="row">
       <div class="ten columns offset-by-two">
-        <button class="button" {{action redirectConnectShop target="controller"}} {{bindAttr disabled="shop.isInvalid"}}>Connect</button>
+        <button class="button radius" {{action redirectConnectShop target="controller"}} {{bindAttr disabled="shop.isInvalid"}}>Connect</button>
       </div>
     </div>
   {{/if}}
@@ -50,7 +50,7 @@
     </div>
     <div class="row">
       <div class="ten columns offset-by-two">
-        <button class="button" {{action createShop target="controller"}} {{bindAttr disabled="shop.isInvalid"}}>Add</button>
+        <button class="button radius" {{action createShop target="controller"}} {{bindAttr disabled="shop.isInvalid"}}>Add</button>
       </div>
     </div>
   {{/if}}
