--- a/app/assets/javascripts/templates/welcome.handlebars
+++ b/app/assets/javascripts/templates/welcome.handlebars
@@ -58,7 +58,7 @@ _shopstream.trackOrder();
 {{/if}}
 
 <section class="text-center">
-  <a {{action goToDashboard}} class="large success button">
+  <a {{action goToDashboard}} class="large success button radius">
     Take me to the dashboard!
   </a>
 </section>
