revenue per vistor not visit

--- a/app/assets/javascripts/templates/dashboard.handlebars
+++ b/app/assets/javascripts/templates/dashboard.handlebars
@@ -17,7 +17,7 @@
     </div>
     <div class="three columns metric">
       {{#view SS.AnimatedNumbersView valueBinding="revenuePerVisit"}}<h2>{{money view.animatedValue}}</h2>{{/view}}
-      <h5 class="subheader"><strong>Revenue</strong> per visit</h5>
+      <h5 class="subheader"><strong>Revenue</strong> per visitor</h5>
     </div>
     <div class="three columns metric">
       {{#view SS.AnimatedNumbersView valueBinding="conversionRate"}}<h2>{{percentage view.animatedValue}}</h2>{{/view}}
