--- a/app/assets/javascripts/templates/dashboard.handlebars
+++ b/app/assets/javascripts/templates/dashboard.handlebars
@@ -8,7 +8,7 @@
         <h5 class="subheader short">30 day max <strong>{{money view.animatedValue}}</strong></h5>
       {{/view}}
     </div>
-    <div class="two columns metric">
+    <div class="three columns metric">
       {{#view SS.AnimatedNumbersView valueBinding="revenuePerVisit"}}<h2>{{money view.animatedValue}}</h2>{{/view}}
       <h5 class="subheader"><strong>Revenue</strong> per visitor</h5>
       {{#view SS.AnimatedNumbersView valueBinding="maxRevenuePerVisit"}}
