sku in tracking docs

--- a/app/views/instructions_mailer/instructions.html.erb
+++ b/app/views/instructions_mailer/instructions.html.erb
@@ -22,6 +22,7 @@ _shopstream.addOrder(
   "last" // customer last name, required
 );
 _shopstream.addItem(
+  "SOME123SKU", // item SKU, required
   "Title", // item name, required
   10.01, // item price, required
   2 // item quantity, required
