uppercase via css

--- a/app/assets/javascripts/templates/shop.handlebars
+++ b/app/assets/javascripts/templates/shop.handlebars
@@ -9,11 +9,9 @@
         </div>
       {{/unless}}
     {{else}}
-        <div class="alert-box secondary">
-					<div class="text-center">
-          We currently haven't captured any data from your store.  <a class="button success" {{action goToSettings href=true}}>Install The Tracking
+        <div class="alert-box secondary text-center">
+          We currently haven't captured any data from your store. <a class="button success" {{action goToSettings href=true}}>Install The Tracking
             Script Now!</a>
-					</div>
         </div>
     {{/if}}
   {{/if}}
