optional first/last name

--- a/app/assets/javascripts/templates/welcome.handlebars
+++ b/app/assets/javascripts/templates/welcome.handlebars
@@ -26,8 +26,8 @@ _shopstream.addOrder(
   "Order name", // order name, required
   20.02, // order total, required
   "email@customer.com", // customer email, required
-  "first", // customer first name, required
-  "last" // customer last name, required
+  "first", // customer first name, optional
+  "last" // customer last name, optional
 );
 _shopstream.addItem(
   "SOME123SKU", // item SKU, required
