minor fixes for mobile/tablet #53

--- a/app/views/home/app.html.erb
+++ b/app/views/home/app.html.erb
@@ -1,4 +1,5 @@
-<%= audio_tag 'beep.wav', preload: :auto, class: 'beep-sound' %>
+<%= audio_tag 'beep.m4a', preload: :auto, class: 'beep-sound' %>
+
 <script>
   window.authToken = "<%= current_user.authentication_token %>";
   window.userId = "<%= current_user.id %>";
