--- a/app/views/superuser/users/index.html.erb
+++ b/app/views/superuser/users/index.html.erb
@@ -1,14 +1,14 @@
 <div class="twelve columns">
   <div class="row">
-    <h3>Users</h3>
+    <h3>Users <small><%= User.count %> users</small></h3>
 
-    <table>
+    <table class="twelve">
       <thead>
         <tr>
-          <th class="two">Name</th>
+          <th class="three">Name</th>
           <th class="three">Email</th>
           <th class="two">Stores</th>
-          <th class="three">Member since</th>
+          <th class="two">Member since</th>
           <th>Actions</th>
         </tr>
       </thead>
