--- a/app/views/superuser/shops/index.html.erb
+++ b/app/views/superuser/shops/index.html.erb
@@ -2,30 +2,8 @@
   <div class="row">
     <h3>Shops <small><%= pluralize Shop.count, 'shop' %></h3>
 
-    <table>
-      <thead>
-        <tr>
-          <th class="three">Name</th>
-          <th class="two">User</th>
-          <th class="two">Token</th>
-          <th class="one">Type</th>
-          <th class="two">Timezone</th>
-          <th class="two">Created at</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @shops.each do |shop| %>
-          <tr>
-            <td><%= shop.name %> — <%= shop.domain %></td>
-            <td><%= shop.user.name %></td>
-            <td><%= shop.token %></td>
-            <td><%= shop.shopify? ? 'Shopify' : 'Custom' %></td>
-            <td><%= shop.timezone_name %></td>
-            <td><%= shop.created_at.to_formatted_s :short %></td>
-          </tr>
-        <% end %>
-      </table>
+    <%= render partial: 'list' %>
 
-      <%= paginate @shops %>
-    </div>
+    <%= paginate @shops %>
   </div>
+</div>
