--- a/app/views/superuser/users/show.html.erb
+++ b/app/views/superuser/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="twelve columns">
   <div class="row">
     <h3><%= @user.name %></h3>
-    <%= link_to 'Act as', new_user_masquerade_path(@user), class: 'tiny button' %>
+    <%= link_to 'Act as', new_user_masquerade_path(@user), class: 'tiny button', target: '_blank' %>
 
     <p>
       <b>Email:</b> <%= @user.email %><br>
