--- a/app/assets/javascripts/templates/welcome.handlebars
+++ b/app/assets/javascripts/templates/welcome.handlebars
@@ -25,7 +25,7 @@
 var _shopstream = _shopstream || [];
 
 _shopstream.push(['addOrder',
-  "Order name", // order name, required
+  "Order ID", // order ID, required
   20.02, // order total, required
   "email@customer.com", // customer email, required
   "first", // customer first name, optional
