--- a/app/assets/javascripts/templates/welcome.handlebars
+++ b/app/assets/javascripts/templates/welcome.handlebars
@@ -41,8 +41,10 @@ _shopstream.push(['trackOrder']);
       </pre></p>
     </code>
 
+    <p>It is recommended that both are placed inside <pre>head</pre>, before any other script.</p>
+
     <h4 class="subheader">Not a developer?</h4>
-		<p> Send these instructions to your developer's email address! </p>
+		<p>Send these instructions to your developer's email address! </p>
     <div class="row">
       <div class="six columns">
         <div class="row collapse">
