--- a/app/views/instructions_mailer/instructions.html.erb
+++ b/app/views/instructions_mailer/instructions.html.erb
@@ -35,4 +35,6 @@ _shopstream.push(['trackOrder']);
   </pre></p>
 </code>
 
+<p>It is recommended that both are placed inside <pre>head</pre>, before any other script.</p>
+
 <p>Have a good day!</p>
